syntax = "proto3";
package nibiru.oracle.v1;

import "gogoproto/gogo.proto";
import "nibiru/oracle/v1/oracle.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  nibiru.oracle.v1.Params params = 1 [ (gogoproto.nullable) = false ];
  repeated nibiru.oracle.v1.FeederDelegation feeder_delegations = 2
      [ (gogoproto.nullable) = false ];
  repeated nibiru.oracle.v1.ExchangeRateTuple exchange_rates = 3 [
    (gogoproto.castrepeated) = "ExchangeRateTuples",
    (gogoproto.nullable) = false
  ];
  repeated nibiru.oracle.v1.MissCounter miss_counters = 4
      [ (gogoproto.nullable) = false ];
  repeated nibiru.oracle.v1.AggregateExchangeRatePrevote
      aggregate_exchange_rate_prevotes = 5 [ (gogoproto.nullable) = false ];
  repeated nibiru.oracle.v1.AggregateExchangeRateVote
      aggregate_exchange_rate_votes = 6 [ (gogoproto.nullable) = false ];
  repeated string pairs = 7 [
    (gogoproto.customtype) =
        "github.com/NibiruChain/nibiru/v2/x/common/asset.Pair",
    (gogoproto.nullable) = false
  ];
  repeated nibiru.oracle.v1.Rewards rewards = 8
      [ (gogoproto.nullable) = false ];
}

// FeederDelegation is the address for where oracle feeder authority are
// delegated to. By default this struct is only used at genesis to feed in
// default feeder addresses.
message FeederDelegation {
  string feeder_address = 1;
  string validator_address = 2;
}

// MissCounter defines an miss counter and validator address pair used in
// oracle module's genesis state
message MissCounter {
  string validator_address = 1;
  uint64 miss_counter = 2;
}
